--- a/css/index.css
+++ b/css/index.css
@@ -13,13 +13,25 @@ body {
     text-align: center;
     margin: 0px;
     overflow: hidden;
+    font-family:Verdana,Helvetica,Geneva,sans-serif,"Times New Roman","Microsoft YaHei",Georgia,Serif;
 }
 
 #canvasdiv {
     height: 100%;
     width: 100%;
     position: fixed;
+    /*z-index: 102;*/
+
 }
+
+#container {
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 101;
+    /*display: none;*/
+}
+
 
 .linelogo {
     width: 186px;
@@ -40,7 +52,7 @@ body {
     bottom: 96px;
     right: 0;
     margin: auto;
-    background: #AABBCC;
+    background: #FFFFFF;
     animation: linestretching .5s ease 4 alternate;
     -webkit-animation: linestretching .5s ease 4 alternate;
 }
@@ -56,16 +68,6 @@ body {
     }
 }
 
-/*@-webkit-keyframes linestretching {*/
-    /*from {*/
-        /*width: 0px;*/
-        /*height: 1px;*/
-    /*}*/
-    /*to {*/
-        /*width: 256px;*/
-        /*height: 1px;*/
-    /*}*/
-/*}*/
 
 #loadline2 {
     display: none;
@@ -77,7 +79,7 @@ body {
     bottom: 96px;
     right: 0;
     margin: auto;
-    background: #AABBCC;
+    background: #FFFFFF;
     animation: linestretching2 .5s  cubic-bezier(.645, .045, .175, 1) 1 normal ;
     -webkit-animation: linestretching2 .5s  cubic-bezier(.645, .045, .175, 1) 1 normal ;
 }
@@ -93,32 +95,24 @@ body {
     }
 }
 
-/*@-webkit-keyframes linestretching2 {*/
-    /*from {*/
-        /*width: 0px;*/
-        /*height: 1px;*/
-    /*}*/
-    /*to {*/
-        /*width: 100%;*/
-        /*height: 1px;*/
-    /*}*/
-/*}*/
 
 #loadline3 {
     display: none;
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0px;
     right: 0;
     margin: auto;
+
     background: -webkit-linear-gradient(45deg, #445566, #334455);
     background: -moz-linear-gradient(45deg, #445566, #334455);
     background: -ms-linear-gradient(45deg, #445566 0, #334455 100%);
     background: -o-linear-gradient(135deg, #445566, #334455);
     background: linear-gradient(45deg, #445566, #334455);
+    background-image: url("../images/bg1.jpg");
     animation: linestretching3 1s ease 1 normal ;
     -webkit-animation: linestretching3 1s ease 1 normal ;
 }
@@ -134,23 +128,13 @@ body {
     }
 }
 
-/*@-webkit-keyframes linestretching3 {*/
-    /*from {*/
-        /*height: 1px;*/
-        /*bottom: 96px;*/
-    /*}*/
-    /*to {*/
-        /*height: 100%;*/
-        /*bottom: 0px;*/
-    /*}*/
-/*}*/
-
 
 .logodiv {
     text-align: left;
     top: 15px;
     left: 15px;
     position: absolute;
+    z-index: 102;
 }
 
 #logoline {
@@ -165,6 +149,7 @@ body {
     background: #778899;
     animation: logolinestretching 2s ease infinite alternate;
     -webkit-animation: logolinestretching 2s ease infinite alternate;
+    z-index: 103;
 }
 
 @keyframes logolinestretching {
@@ -178,43 +163,125 @@ body {
     }
 }
 .logo {
-    width: 360px;
+    width: 256px;
 }
+
 .about_arrow{
     top: 15px;
     right:15px;
-    width: 100px;
+    width: 90px;
     height: 8px;
-    text-align: right;
-    position: absolute;
+    color: rgba(128,255,255,075);
+    text-align: center;
+    position: fixed;
+    cursor:pointer;
+    z-index: 104;
+}
+
+.about_arrow:hover{
+    color: rgba(128,255,255,095);
+}
+
+.about_arrow>svg{
+    width:72px;
+    height:5px;
+    transition:width .5s;
+}
+
+.about_arrow:hover>svg{
+    width: 86px;
 }
 
 .about_title{
-    color: #ffffff;
-    font-size: 17px;
-    margin-bottom: -12px;
-    margin-right: 2px;
+     font-size: 15px;
+     margin-bottom: -12px;
+     margin-right: 0px;
+ }
+
+.element {
+    width: 60%;
+    height: 80%;
+    box-shadow: 0px 0px 12px rgba(0,255,255,0.5);
+    border: 1px solid rgba(127,255,255,0.25);
+    text-align: center;
+    cursor: default;
+
+}
+
+.element:hover {
+    box-shadow: 0px 0px 12px rgba(0,255,255,0.75);
+    border: 1px solid rgba(127,255,255,0.75);
+}
+
+.element .number {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 12px;
+    color: rgba(127,255,255,0.75);
+}
+
+.element .symbol {
+    position: absolute;
+    top: 40px;
+    left: 0px;
+    right: 0px;
+    font-size: 60px;
+    font-weight: bold;
+    color: rgba(255,255,255,0.75);
+    text-shadow: 0 0 10px rgba(0,255,255,0.95);
+}
+
+.element .details {
+    position: absolute;
+    bottom: 15px;
+    left: 0px;
+    right: 0px;
+    font-size: 12px;
+    color: rgba(127,255,255,0.75);
+}
+
+
+#menu{
+    position: absolute;
+    width: 300px;
+    height: 30px;
+    left: 50%;
+    top: 10px;
+    z-index: 103;
+}
+#menu button {
+    color: rgba(127,255,255,0.75);
+    background: transparent;
+    outline: 1px solid rgba(127,255,255,0.75);
+    border: 0px;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+#menu button:hover {
+    background-color: rgba(0,255,255,0.5);
+}
+#menu button:active {
+    color: #000000;
+    background-color: rgba(0,255,255,0.75);
 }
 
 .legal {
     color: #ffffff;
     bottom: 5px;
-    right: 5px;
-    font-size: 13px;
+    left: 5px;
+    font-size: 12px;
     position: absolute;
 }
 
 /*------Menu button----------*/
-
 .menuLine {
     position: fixed;
     top: 50%;
-    right: 40px;
-    z-index: 110;
-    margin-top: -15px;
+    right: 20px;
     width: 30px;
     height: 30px;
-    /*transition: transform 6s cubic-bezier(.755, .05, .855, .06) 0s, visibility .6s linear 0s;*/
+    z-index: 105;
 }
 
 .menuLine_open{
@@ -226,8 +293,6 @@ body {
     height: 100%;
     cursor: pointer;
 }
-
-
 
 .menuLine_open > span{
     position: absolute;
@@ -243,23 +308,34 @@ body {
     width: 100%;
     height: 100%;
     display: block;
-    background-color: #fff;
+    background-color:rgba(128,255,255,055);;
 }
-
+.menuLine_open:hover > span:before{
+    background-color: rgba(128,255,255,095);;
+}
 
 .menuLine_open > span:nth-child(1) {
     top: 3px;
-    animation: menuTrigger_hoverX 1s cubic-bezier(.6, .05, .2, 1) 0s;
 }
 
 .menuLine_open > span:nth-child(2) {
     top: 13px;
-    animation: menuTrigger_hoverX 1s cubic-bezier(.6, .05, .2, 1) .5s;
 }
 
 .menuLine_open > span:nth-child(3) {
     top: 23px;
-    animation: menuTrigger_hoverX 1s cubic-bezier(.6, .05, .2, 1) 1s;
+}
+
+.menuLine_open:hover > span:nth-child(1) {
+    animation: menuLine_hoverX .2s ease-in 0s;
+}
+
+.menuLine_open:hover > span:nth-child(2) {
+    animation: menuLine_hoverX .2s ease-in 0.1s;
+}
+
+.menuLine_open:hover > span:nth-child(3) {
+    animation: menuLine_hoverX .2s ease-in 0.2s;
 }
 
 @keyframes menuLine_hoverX {
@@ -280,3 +356,6 @@ body {
         transform: none
     }
 }
+
+/*//////////////////////////*/
+
